<resources>
    <string name="app_name">Oriented News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_account">Create account</string>
    <string name="log_in_instead">Log in instead</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="botNavBarNewsTitle">News</string>
    <string name="botNavBarFavouritesTitle">Favourites</string>
    <string name="botNavBarProfileTitle">Profile</string>
    <string name="title_activity_news_web_view">NewsWebView</string>
</resources>
