<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
>
    <ImageView
            android:id="@+id/authImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="@dimen/authImgWidth"
            android:layout_height="@dimen/authImgHeight"
            android:layout_margin="@dimen/authImgMarginTop"
            android:src="@drawable/user_auth"
    />
    <EditText
            android:id="@+id/authEmail"
            app:layout_constraintTop_toBottomOf="@id/authImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/authEmailMarginTop"
            android:hint="Email"
    />
    <EditText
            android:id="@+id/authPassword"
            app:layout_constraintTop_toBottomOf="@+id/authEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/authPasswordMarginTop"
            android:hint="@string/password"
    />
    <Button
            android:id="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/authPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
    />
    <TextView
            android:id="@+id/createNewAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/create_new_account"
            android:layout_marginTop="@dimen/newAccMarginTop"
    />

</androidx.constraintlayout.widget.ConstraintLayout>


